[package]
name = "keymeow"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kc = { package = "keycat", git = "https://github.com/semilin/keycat", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
[dev-dependencies]
serde_json = "1.0.97"
